<resources>
    <string name="app_name">勉強します</string>
    <string name="action_settings">Configuración</string>
    <string name="max_lesson">Ultima Lección</string>
    <string name="vocabulary">Vocabulario</string>
    <string name="advance_vocabulary">Vocabulario Avanzado</string>
    <string name="advance_vocabulary_write">Escribir Vocabulario Avanzado</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="kanjis">Kanjis</string>
    <string name="warning_no_lesson">No tiene lecciones seleccionadas, se selecciono la lección 1</string>
    <string name="warning_no_kanjis">Las lecciones seleccionadas no tienen kanjis</string>
    <string name="warning_no_vocabulary">Las lecciones seleccionadas no tienen vocabulario</string>
    <string name="lessons">Lecciones</string>
    <string name="lesson1">Lección 1</string>
    <string name="lesson2">Lección 2</string>
    <string name="lesson3">Lección 3</string>
    <string name="lesson4">Lección 4</string>
    <string name="lesson5">Lección 5</string>
    <string name="lesson6">Lección 6</string>
    <string name="lesson7">Lección 7</string>
    <string name="lesson8">Lección 8</string>
    <string name="lesson9">Lección 9</string>
    <string name="lesson10">Lección 10</string>
    <string name="lesson11">Lección 11</string>
    <string name="lesson12">Lección 12</string>
    <string name="lesson13">Lección 13</string>
    <string name="lesson14">Lección 14</string>
    <string name="lesson15">Lección 15</string>
    <string name="lesson16">Lección 16</string>
    <string name="lesson17">Lección 17</string>
    <string name="lesson18">Lección 18</string>
    <string name="lesson19">Lección 19</string>
    <string name="lesson20">Lección 20</string>


    <!-- NO TRADUCIR!!!!!!!!!! -->
    <string name="lesson_1_key">lesson_1_key</string>
    <string name="lesson_2_key">lesson_2_key</string>
    <string name="lesson_3_key">lesson_3_key</string>
    <string name="lesson_4_key">lesson_4_key</string>
    <string name="lesson_5_key">lesson_5_key</string>
    <string name="lesson_6_key">lesson_6_key</string>
    <string name="lesson_7_key">lesson_7_key</string>
    <string name="lesson_8_key">lesson_8_key</string>
    <string name="lesson_9_key">lesson_9_key</string>
    <string name="lesson_10_key">lesson_10_key</string>
    <string name="lesson_11_key">lesson_11_key</string>
    <string name="lesson_12_key">lesson_12_key</string>
    <string name="lesson_13_key">lesson_13_key</string>
    <string name="lesson_14_key">lesson_14_key</string>
    <string name="lesson_15_key">lesson_15_key</string>
    <string name="lesson_16_key">lesson_16_key</string>
    <string name="lesson_17_key">lesson_17_key</string>
    <string name="lesson_18_key">lesson_18_key</string>
    <string name="lesson_19_key">lesson_19_key</string>
    <string name="lesson_20_key">lesson_20_key</string>

    <string name="pref_correct_kanji">pref_correct_kanji</string>
    <string name="pref_incorrect_kanji">pref_incorrect_kanji</string>
    <string name="pref_write_correct_word">pref_write_correct_word</string>
    <string name="pref_write_incorrect_word">pref_write_incorrect_word</string>
    <string name="pref_correct_word">pref_correct_word</string>
    <string name="pref_incorrect_word">pref_incorrect_word</string>
    <string name="pref_correct_adv_word">pref_correct_word</string>
    <string name="pref_incorrect_adv_word">pref_incorrect_word</string>

</resources>
