<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dim_8pd"
        android:background="@drawable/border_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">
            <ImageView
                android:layout_marginTop="@dimen/dim_16pd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/welcome"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">


            <Button
                android:text="@string/vocabulary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/welcome_vocabulary_button"
                android:layout_margin="@dimen/dim_2pd"
                android:layout_weight="1"
                android:background="@drawable/button_selector"/>

            <Button
                android:text="@string/kanjis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/welcome_kanjis_button"
                android:layout_margin="@dimen/dim_2pd"
                android:layout_weight="1"
                android:background="@drawable/button_selector"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            >
            <Button
                android:text="@string/advance_vocabulary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/welcome_advance_vocabulary_button"
                android:layout_margin="@dimen/dim_2pd"
                android:layout_weight="1"
                android:background="@drawable/button_selector"/>
            <Button
                android:text="@string/advance_vocabulary_write"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/welcome_write_advance_vocabulary_button"
                android:layout_margin="@dimen/dim_2pd"
                android:layout_weight="1"
                android:background="@drawable/button_selector"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>